...
                            self.saveCheck = dataList.saveCheck
                            print("self.saveCheck \(saveCheck) : Repo_View")
                        }) {
                            Text("Save")
                                .frame(width: 100, height: 50, alignment: .center)
                        }
                        .accessibilityIdentifier("SaveButton")
                        .toast(isPresented: $saveCheck, dismissAfter: 0.5) {
                            print("SAVE SUCCESS")
                        } content: {
                            ToastView("SAVE SUCCESS")
                        }
                        .background(Color.black)
...
